akvo/mediaroot/akvo/css/x_project.css
#project_status {
    background-color:#2096F5; /* fallback color */
    background-image:-moz-linear-gradient(100% 100% 90deg, #2D80AE, #2096F5);
    background-image:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#2096F5), to(#2D80AE));
    color:#fff;
    margin-bottom:20px;
    -khtml-border-radius:5px;
    -moz-border-radius:5px; 
    -webkit-border-radius:5px;
    border-radius:5px;
    }
    
#project_status div {
    
    }
    
/* Get's the color in the models file!*/
.status_large {
    padding:5px 10px;
    -khtml-border-radius:13px;
    -moz-border-radius:13px; 
    -webkit-border-radius:13px;
    border-radius:13px;
    font-size:1.2em;
    }
    
.project_budget_table, .project_budget_table tr, .project_budget_table tr td {
    border:none;
    }


div#gallery_box {
	background-color:#fff;
	overflow:hidden; 
	position:relative; 
	height:125px;
	width:325px;
	max-width:325px;
	border:2px solid #ccc;
	}
	
/* width is calculated in the view and defined inline*/
div#gallery_box_slider {
	position:absolute;
	height:75px;
	left:0;
	padding-left:2px;
	}
	
#gallery_box_slider img {
	float:left;
	}

.gallery_links_container > div {
	border:2px solid #ccc;
	float:left;
	margin:5px;
	}

